2012-05-06  Diego Elio Pettenò <flameeyes@flameeyes.eu>

	* Add support for Supermicro H8DGU-F to ipmi-sensors.

2012-05-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/ipmidetect_.h, common/daemonutil/daemon-util.c:
	Remove unnecessary includes.  (Found by Diego Elio Pettenò)
	
2012-05-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c (ipmiconsole_argp_parse): Fix
	password length check bug.  (Found by Diego Elio Pettenò)
	
2012-05-04  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/, man/: Split SDR option "sdr-cache-directory"
	into separate macro/man option.

	* ipmidetectd/: Rename files for consistency to other parts of
	FreeIPMI.

	* toolevent/tool-event-common.c: Allow NULL for column_width input
	as long as output will be comma separated.  Allow NULL for
	entity_id_counts if entity_sensor_names not desired.
	
2012-05-03  Albert Chu <chu11@llnl.gov>

	* ipmidetectd/ipmidetectd_config.c (_usage): Fix cut and paste
	typo.
	
2012-05-03  Albert Chu <chu11@llnl.gov>

	* common/daemonutil/daemon-util.h, common/daemonutil/daemonutil.c:
	New files and convenience library.

	* bmc-watchdog/, ipmidetectd/: Utilize new common library.
	Various code cleanup as needed.

	* ipmidetectd/ipmidetectd_loop.h, ipmidetectd/ipmidetectd_loop.c:
	Remove files.  Collapse code in ipmidetectd.c.

	* ipmidetectd/ipmidetectd_argp.h, ipmidetectd/ipmidetectd_argp.c:
	New files.

	* ipmidetectd/: Various code re-org for consistency to rest of
	FreeIPMI.

	* ipmidetect/ipmidetect_.h, ipmidetect/ipmidetect-argp.h,
	ipmidetect/ipmidetect-argp.c: New files.

	* ipmidetect/: Various code re-org for consistency to rest of
	FreeIPMI.
	
2012-05-02  Albert Chu <chu11@llnl.gov>

	* man/ipmidetectd.8.pre.in: Document that errors are logged to
	syslog.

	* ipmidetectd/: Use miscutil error libraries instead of internal
	debug functions.

	* ipmidetectd/ipmidetectd_debug.h,
	ipmidetectd/ipmidetectd_debug.c: Remove files.
	
2012-05-02  Albert Chu <chu11@llnl.gov>
