@@ -141,6 +141,7 @@ extern "C" {
  * Supermicro X8DTN+-F (X8DTNPLUS_F)
  * Supermicro X8SIE
  * Supermicro X9SCA-F-O (X9SCA_F_O)
+ * Supermicro H8DGU-F (H8DGU_F)
  */
 
 /* achu: not official names, named based on use context */
