@@ -241,7 +241,6 @@ using the \fB\-\-assume\-system\-event\-records\fR option above.
 #include <@top_srcdir@/man/manpage-common-workaround-extra-text.man>
 #include <@top_srcdir@/man/manpage-common-oem-interpretation.man>
 .LP
-
 Dell Poweredge 2900, Dell Poweredge 2950, Dell Poweredge R610, Dell
 Poweredge R710, Fujitsu iRMC S1 and iRMC S2 systems, Intel
 S5500WB/Penguin Computing Relion 700, Intel S2600JF/Appro 512X, Intel
@@ -251,7 +250,8 @@ Supermicro X7DBR-3, Supermicro X7DB8, Supermicro X8DTN, Supermicro
 X7SBI-LN4, Supermicro X8DTH, Supermicro X8DTG, Supermicro X8DTU,
 Supermicro X8DT3-LN4F, Supermicro X8DTU-6+, Supermicro X8DTL,
 Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro X9SCL, Supermicro
-X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE, Supermicro X9SCA-F-O.
+X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE, Supermicro X9SCA-F-O,
+Supermicro H8DGU-F.
 .SH "EXAMPLES"
 .B # ipmi-sel 
 .PP
