@@ -247,7 +247,7 @@ Supermicro X7DB8, Supermicro X8DTN, Supermicro X7SBI-LN4, Supermicro
 X8DTH, Supermicro X8DTG, Supermicro X8DTU, Supermicro X8DT3-LN4F,
 Supermicro X8DTU-6+, Supermicro X8DTL, Supermicro X8DTL-3F, Supermicro
 X8SIL-F, Supermicro X9SCL, Supermicro X9SCM, Supermicro X8DTN+-F,
-Supermicro X8SIE, Supermicro X9SCA-F-O.
+Supermicro X8SIE, Supermicro X9SCA-F-O, Supermicro H8DGU-F.
 .SH "EXAMPLES"
 .B # ipmi-sensors 
 .PP
